--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,10 +9,11 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/",
+        "dest": "index.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers": {
-            "Access-Control-Allow-Origin": "*"
-          }
+          "Access-Control-Allow-Origin": "*"
+        }
       }
     ]
   }
